css/index.css
:root {
  --lightgray: #e0e0e0;
  --gray: #C0C0C0;
  --fadedgray: #6D6565;
  --darkgray: #111111;
  --bgcolor: #fffff8;
}
* {
  box-sizing: border-box;
}
html,
body {
  font-family: system-ui, sans-serif;
  color: var(--darkgray);
  background-color: var(--bgcolor);
  font-family: 'EB Garamond', Garamond, serif;
  margin: 0;
}
.container {
  width: 60%;
  margin: 0 auto;
}
.page {
  padding-bottom: 6rem;
}
h1, h2, h3 {
  font-size: 48px;
  font-weight: 600;
  line-height: 80%;
  padding-top: 3rem;
}
h2, h3 {
  font-size: 27px;
}
p:last-child {
  margin-bottom: 0;
}
p,
.tmpl-post li,
img {
  max-width: 37.5em; /* 600px /16 */
}
.tmpl-post {
  width:80ch;
}
p,
.tmpl-post li {
  line-height: 1.45;
}
p, a, li {
  font-size: 21px;
  font-weight: 400;
}
.lead, h4 {
  font-size: 27px;
  font-weight: 400;
}
a[href] {
  color: var(--darkgray);
}
a[href]:visited {
  color: var(--fadedgray);
}
blockquote {
  font-size: 18px;
}
main {
  padding-top: 4rem;
}
main :first-child {
  margin-top: 0;
}

header {
  /*border-bottom: 1px dashed var(--lightgray);*/
  position: fixed;
  min-height:40px;
  width: 100%; 
  margin: 0 auto;
  background-color: var(--bgcolor);
  z-index:10;
  text-align: center;
}
header:after {
  content: "";
  display: table;
  clear: both;
}
table {
  margin: 1em 0;
}
table td,
table th {
  padding-right: 1em;
}

pre,
code {
  font-family: Consolas, Courier, monospace;
  line-height: 1.5;
}
pre {
  font-size: 14px;
  line-height: 1.375;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  -moz-tab-size: 2;
  -o-tab-size: 2;
  tab-size: 2;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
  padding: 1em;
  margin: .5em 0;
  background-color: #f6f6f6;
}
.highlight-line {
  display: block;
  padding: 0.125em 1em;
  text-decoration: none; /* override del, ins, mark defaults */
  color: inherit; /* override del, ins, mark defaults */
}

/* allow highlighting empty lines */
.highlight-line:empty:before {
  content: " ";
}
/* avoid double line breaks when using display: block; */
.highlight-line + br {
  display: none;
}

.highlight-line-isdir {
  color: #b0b0b0;
  background-color: #222;
}
.highlight-line-active {
  background-color: #444;
  background-color: hsla(0, 0%, 27%, .8);
}
.highlight-line-add {
  background-color: #45844b;
}
.highlight-line-remove {
  background-color: #902f2f;
}

/* Header */
/*.home {
  padding: 0 1rem;
  float: left;
  margin: 1rem 0; /* 16px /16 */
  font-size: 1em; /* 16px /16 */
}
.home :link:not(:hover) {
  text-decoration: none;
}*/

ol {
  padding-inline-start: 4rem;
}
ol li, ul li {
  padding: 0.5rem 0 0.5rem 1rem;
}

/* Posts list */
.postlist {
  padding-inline-start: 0;
  padding: 0;
}
.postlist-item {
  counter-increment: start-from -1;
    list-style: none;

}
.postlist-item:before {
  display: inline-block;
  pointer-events: none;
  content: "" counter(start-from, decimal-leading-zero) ". ";
  line-height: 100%;
  text-align: right;
}
.postlist-date,
.postlist-item:before {
  font-size: 0.8125em; /* 13px /16 */
  color: var(--darkgray);
}
.postlist-date {
  word-spacing: -0.5px;
}
.postlist-link {
  display: inline-block;
  padding: 0.25em 0.1875em; /* 4px 3px /16 */
}
.postlist-item-active .postlist-link {
  font-weight: bold;
}
.tmpl-home .postlist-link {
  font-size: 1.1875em; /* 19px /16 */
}


/* Tags */


.tag {
  display: inline-block;
  text-transform: uppercase;
  font-size: 0.625em; /* 10px /16 */
  padding: 2px 4px;
  margin-left: 0.8em; /* 8px /10 */
  background-color: var(--fadedgray);
  color: var(--bgcolor);
  border-radius: 0.25em; /* 3px /12 */
  text-decoration: none;
}
a[href].tag,
a[href].tag:visited {
  color: #fff;
}

/* Warning */
.warning {
  background-color: #ffc;
  padding: 1em 0.625em; /* 16px 10px /16 */
}
.warning ol:only-child {
  margin: 0;
}

/* Direct Links / Markdown Headers */
.direct-link {
  font-family: sans-serif;
  text-decoration: none;
  font-style: normal;
  margin-left: .1em;
}
a[href].direct-link,
a[href].direct-link:visited {
  color: transparent;
}
a[href].direct-link:focus,
a[href].direct-link:focus:visited,
:hover > a[href].direct-link,
:hover > a[href].direct-link:visited {
  color: #aaa;
}

.home {
  display:none;
}

/* Nav */

.nav {
  padding: 0;
  list-style: none;
  display: inline-block;
}
.nav-item {
  display: inline-block;
  margin-right: 1em;
  text-transform: lowercase;
  font-variant: small-caps;
}
.nav-item a {
  font-weight: 600;
    text-decoration: none;
    color: var(--fadedgray) !important;
}
.nav-item a[href]:hover {
  color: var(--darkgray) !important;
    text-decoration: underline;
}
.nav-item-active a{
    color: var(--darkgray) !important;

}
.nav-item-active::before {
  content: '\b7\a0';
      color: var(--fadedgray) !important;

}


footer {
  padding-top: 4rem;
  margin: 0 auto;
  width: 60%;
}


/* Mailchimp */

#mc-embedded-subscribe-form {
  padding:2% 2% 2% 0;
}

#mc_embed_signup div.mc-field-group input, #mc_embed_signup div.mc-field-group label {
 font-family: 'EB Garamond', Garamond, Times;
 font-size: 1.4rem;
 line-height: 2rem;
 margin-bottom: 16px;
}

#mc_embed_signup div.mc-field-group input {
  border:none;
  background: none;
  border-bottom:2px solid var(--darkgray);
  font-style: italic;
     font-family: 'EB Garamond', Garamond, Times;

}

#mc_embed_signup div.mc0-field-group input::placeholder {
  color:var(--fadedgray);
}

#mc_embed_signup div.mc-field-group input:focus, .button:focus {
  outline:none;
}

#mc_embed_signup .button {
  padding:16px;
  font-size:1.4rem;
  border:solid 2px var(--darkgray);
   font-family: 'EB Garamond', Garamond, Times;
   background-color: var(--bgcolor);
}

#mc_embed_signup .button:hover, #mc_embed_signup .button:active,  #mc_embed_signup .button:focus {
  color:var(--bgcolor);
  background-color: var(--darkgray);
  cursor:pointer;
}


.darkmode-layer, .darkmode-toggle {
  z-index: 20;
}
#darkmodecaption {
  position: fixed;
  bottom: 20px; right:90px;
}

/* Responsive styles */

  @media (max-width: 640px) {
    .tmpl-post {
      width:unset;
    }
    .container, footer {
      width: 90%;
    }
    header {
      text-align: left;
      display: block;
      width:90%;
      position: unset;
    }
    .nav, .nav-item {
      display: block;
    }
    main {
      padding-top: 2rem;
    }
    ol {
        padding-inline-start: 1rem;

    }

    .postlist-item {
      padding:1rem 0;
    }
    .postlist-link {
            padding-left: 0;

    }
    .postlist-date, .postlist-item:before {
      display: block;
      text-align: left; 
    }
    .tag {
      margin-left:0;
    }
    #darkmodecaption {
      display: none;
    }

  }

